@@ -21,15 +21,19 @@
             </Control>
             <Pixie LAnchorPoint="0" LAnchorOffset="-31" TAnchorPoint="0" TAnchorOffset="17" RAnchorPoint="0" RAnchorOffset="17" BAnchorPoint="0" BAnchorOffset="67" Sprite="CRB_Basekit:kitAccent_Scanlines" BGColor="white" TextColor="black" Rotation="45" Font="Default" Text=""/>
             <Pixie LAnchorPoint="1" LAnchorOffset="-15" TAnchorPoint="0" TAnchorOffset="14" RAnchorPoint="1" RAnchorOffset="35" BAnchorPoint="0" BAnchorOffset="64" Sprite="CRB_Basekit:kitAccent_Scanlines" BGColor="white" TextColor="black" Rotation="-45" Font="Default"/>
-            <Control Class="Button" Base="CRB_GroupFrame:sprGroup_Btn_Options" Font="DefaultButton" ButtonType="PushButton" RadioGroup="" LAnchorPoint="0" LAnchorOffset="50" TAnchorPoint="1" TAnchorOffset="-24" RAnchorPoint="0" RAnchorOffset="70" BAnchorPoint="1" BAnchorOffset="-4" DT_VCENTER="1" DT_CENTER="1" BGColor="UI_BtnBGDefault" TextColor="UI_BtnTextDefault" NormalTextColor="UI_BtnTextDefault" PressedTextColor="UI_BtnTextDefault" FlybyTextColor="UI_BtnTextDefault" PressedFlybyTextColor="UI_BtnTextDefault" DisabledTextColor="UI_BtnTextDefault" TooltipType="OnCursor" Name="SettingsButton" TooltipColor="" Tooltip="Settings Window" TooltipId="">
+            <Control Class="Button" Base="CRB_GroupFrame:sprGroup_Btn_Options" Font="DefaultButton" ButtonType="PushButton" RadioGroup="" LAnchorPoint="0" LAnchorOffset="50" TAnchorPoint="1" TAnchorOffset="-24" RAnchorPoint="0" RAnchorOffset="70" BAnchorPoint="1" BAnchorOffset="-4" DT_VCENTER="1" DT_CENTER="1" BGColor="UI_BtnBGDefault" TextColor="UI_BtnTextDefault" NormalTextColor="UI_BtnTextDefault" PressedTextColor="UI_BtnTextDefault" FlybyTextColor="UI_BtnTextDefault" PressedFlybyTextColor="UI_BtnTextDefault" DisabledTextColor="UI_BtnTextDefault" TooltipType="OnCursor" Name="SettingsButton" TooltipColor="" Tooltip="Settings Window" TooltipId="" Text="">
                 <Event Name="ButtonSignal" Function="OnSettings"/>
             </Control>
             <Control Class="Button" Base="CRB_ChatLogSprites:btnCL_Channels" Font="DefaultButton" ButtonType="PushButton" RadioGroup="" LAnchorPoint="0" LAnchorOffset="73" TAnchorPoint="1" TAnchorOffset="-24" RAnchorPoint="0" RAnchorOffset="99" BAnchorPoint="1" BAnchorOffset="2" DT_VCENTER="1" DT_CENTER="1" BGColor="UI_BtnBGDefault" TextColor="UI_BtnTextDefault" NormalTextColor="UI_BtnTextDefault" PressedTextColor="UI_BtnTextDefault" FlybyTextColor="UI_BtnTextDefault" PressedFlybyTextColor="UI_BtnTextDefault" DisabledTextColor="UI_BtnTextDefault" TooltipType="OnCursor" Name="ManualVisitButton" TooltipColor="" Tooltip="Visit Box" TooltipId="" Visible="1">
                 <Event Name="ButtonSignal" Function="OnVisitBox"/>
             </Control>
+            <Control Class="Button" Base="CRB_CompanionsSprites:btnFlying" Font="DefaultButton" ButtonType="PushButton" RadioGroup="" LAnchorPoint="0" LAnchorOffset="98" TAnchorPoint="0" TAnchorOffset="3" RAnchorPoint="0" RAnchorOffset="124" BAnchorPoint="0" BAnchorOffset="29" DT_VCENTER="1" DT_CENTER="1" BGColor="UI_BtnBGDefault" TextColor="UI_BtnTextDefault" NormalTextColor="UI_BtnTextDefault" PressedTextColor="UI_BtnTextDefault" FlybyTextColor="UI_BtnTextDefault" PressedFlybyTextColor="UI_BtnTextDefault" DisabledTextColor="UI_BtnTextDefault" TooltipType="OnCursor" Name="UpdateNoteButton" TooltipColor="" Tooltip="" TooltipId="Friends_UpdateNote">
+                <Event Name="ButtonSignal" Function="OnNoteBox"/>
+            </Control>
         </Control>
-        <Control Class="Grid" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="0" TAnchorOffset="30" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="1" BAnchorOffset="-30" RelativeToClient="1" Font="Default" Text="" BGColor="00000000" TextColor="UI_WindowTextDefault" Template="ChatWindow" TooltipType="OnCursor" Name="FriendsGrid" TooltipColor="" CellBGNormalColor="0000ff00" CellBGSelectedColor="ChannelAccountWisper" CellBGNormalFocusColor="AttributeTechnology" CellBGSelectedFocusColor="ChannelAccountWisper" TextNormalColor="" TextSelectedColor="" TextNormalFocusColor="" TextSelectedFocusColor="" UseParentOpacity="0" VScroll="1" AutoHideScroll="1" NoClip="1" RowHeight="20" NewWindowDepth="1">
-            <Column Name="Name" Width="582" TextColor="White" Image="" MinWidth="10" MaxWidth="2048" MergeLeft="0" SimpleSort="1" DT_VCENTER="1"/>
+        <Control Class="Grid" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="0" TAnchorOffset="30" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="1" BAnchorOffset="-30" RelativeToClient="1" Font="Default" Text="" BGColor="00000000" TextColor="UI_WindowTextDefault" Template="ChatWindow" TooltipType="OnCursor" Name="FriendsGrid" TooltipColor="" CellBGNormalColor="0000ff00" CellBGSelectedColor="ChannelAccountWisper" CellBGNormalFocusColor="AttributeTechnology" CellBGSelectedFocusColor="ChannelAccountWisper" TextNormalColor="" TextSelectedColor="" TextNormalFocusColor="" TextSelectedFocusColor="" UseParentOpacity="0" VScroll="1" AutoHideScroll="1" NoClip="1" RowHeight="20" NewWindowDepth="1" MultiColumn="1" SelectWholeRow="1" HeaderRow="1" HeaderBG="ActionSetBuilder_TEMP:spr_TEMP_ActionSetBottomTierBG">
+            <Column Name="Name" Width="200" TextColor="White" Image="" MinWidth="10" MaxWidth="2048" MergeLeft="0" SimpleSort="1" DT_VCENTER="1"/>
+            <Column Name="Note" Width="2048" TextColor="White" Image="" MinWidth="10" MaxWidth="2048" MergeLeft="0" SimpleSort="1" DT_VCENTER="1"/>
         </Control>
         <Control Class="Window" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="1" TAnchorOffset="-102" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="1" BAnchorOffset="-30" RelativeToClient="1" Font="Default" Text="" BGColor="ff404040" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="VisitPane" TooltipColor="" IgnoreMouse="0" NewWindowDepth="1" Picture="1" Escapable="1" CloseOnExternalClick="0" Sprite="BasicSprites:WhiteFill" TextId="" DT_CENTER="1" Visible="0" Tooltip="">
             <Control Class="Window" LAnchorPoint="0" LAnchorOffset="10" TAnchorPoint="1" TAnchorOffset="-42" RAnchorPoint="0" RAnchorOffset="240" BAnchorPoint="1" BAnchorOffset="-8" RelativeToClient="1" Font="Default" Text="" BGColor="UI_WindowBGDefault" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="VisitEditBG" TooltipColor="" Picture="1" IgnoreMouse="1" Sprite="BK3:UI_BK3_Holo_Snippet">
@@ -45,6 +49,19 @@
             <Event Name="WindowHide" Function="OnVisitBoxHide"/>
         </Control>
         <Control Class="Window" LAnchorPoint="0" LAnchorOffset="-2" TAnchorPoint="0" TAnchorOffset="-2" RAnchorPoint="0" RAnchorOffset="30" BAnchorPoint="0" BAnchorOffset="30" RelativeToClient="1" Font="Default" Text="" BGColor="UI_WindowBGDefault" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="AddonIcon" TooltipColor="" Sprite="RevisitSprite:spr_Revisit" Picture="1" IgnoreMouse="1" Tooltip=""/>
+        <Control Class="Window" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="1" TAnchorOffset="-102" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="1" BAnchorOffset="-30" RelativeToClient="1" Font="Default" Text="" BGColor="ff404040" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="NotePane" TooltipColor="" IgnoreMouse="0" NewWindowDepth="1" Picture="1" Escapable="1" CloseOnExternalClick="0" Sprite="BasicSprites:WhiteFill" TextId="" DT_CENTER="1" Visible="0" Tooltip="">
+            <Control Class="Window" LAnchorPoint="0" LAnchorOffset="10" TAnchorPoint="1" TAnchorOffset="-42" RAnchorPoint="0" RAnchorOffset="240" BAnchorPoint="1" BAnchorOffset="-8" RelativeToClient="1" Font="Default" Text="" BGColor="UI_WindowBGDefault" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="NoteEditBG" TooltipColor="" Picture="1" IgnoreMouse="1" Sprite="BK3:UI_BK3_Holo_Snippet">
+                <Control Class="EditBox" LAnchorPoint="0" LAnchorOffset="5" TAnchorPoint="0" TAnchorOffset="2" RAnchorPoint="1" RAnchorOffset="-5" BAnchorPoint="1" BAnchorOffset="-2" RelativeToClient="1" Font="Default" Text="" BGColor="00000000" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="NoteEditBox" TooltipColor="" WantReturn="1" Border="1" Picture="1" Sprite="BasicSprites:WhiteFill" DT_SINGLELINE="1" DT_VCENTER="1">
+                    <Event Name="EditBoxReturn" Function="OnNoteSubmit"/>
+                </Control>
+            </Control>
+            <Control Class="Button" Base="BK3:btnHolo_Blue_Med" Font="DefaultButton" ButtonType="PushButton" RadioGroup="" LAnchorPoint="0" LAnchorOffset="240" TAnchorPoint="1" TAnchorOffset="-53" RAnchorPoint="0" RAnchorOffset="330" BAnchorPoint="1" BAnchorOffset="3" DT_VCENTER="1" DT_CENTER="1" BGColor="UI_BtnBGDefault" TextColor="UI_BtnTextDefault" NormalTextColor="UI_BtnTextDefault" PressedTextColor="UI_BtnTextDefault" FlybyTextColor="UI_BtnTextDefault" PressedFlybyTextColor="UI_BtnTextDefault" DisabledTextColor="UI_BtnTextDefault" TooltipType="OnCursor" Name="NoteSubmitButton" TooltipColor="" Text="" TextId="CRB_Update">
+                <Event Name="ButtonSignal" Function="OnNoteSubmitBtn"/>
+            </Control>
+            <Control Class="Window" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="0" TAnchorOffset="0" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="0" BAnchorOffset="20" RelativeToClient="1" Font="CRB_InterfaceMedium" Template="Default" Name="NoteTitle" BGColor="ff101010" TextColor="ffc0c0c0" DT_VCENTER="1" DT_CENTER="1" NewControlDepth="2" TextId="Friends_UpdateNote" Text="" TooltipColor="" Picture="1" IgnoreMouse="1" NewWindowDepth="1" Sprite="BasicSprites:WhiteFill"/>
+            <Event Name="WindowShow" Function="OnVisitBoxShow"/>
+            <Event Name="WindowHide" Function="OnVisitBoxHide"/>
+        </Control>
     </Form>
     <Form Class="Window" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="0" TAnchorOffset="0" RAnchorPoint="0" RAnchorOffset="350" BAnchorPoint="0" BAnchorOffset="280" RelativeToClient="1" Font="CRB_Interface9" Text="" BGColor="80303030" TextColor="UI_WindowTextDefault" Template="Default" TooltipType="OnCursor" Name="ConfigForm" Border="1" Picture="1" SwallowMouseClicks="1" Moveable="0" Escapable="1" Overlapped="0" TooltipColor="" Visible="0" TransitionShowHide="1" Sprite="BasicSprites:WhiteFill">
         <Control Class="Window" LAnchorPoint="0" LAnchorOffset="0" TAnchorPoint="0" TAnchorOffset="0" RAnchorPoint="1" RAnchorOffset="0" BAnchorPoint="0" BAnchorOffset="30" RelativeToClient="1" Font="Default" Text="" BGColor="ff101010" TextColor="ffffffff" Template="Default" TooltipType="OnCursor" Name="HeaderBG" TooltipColor="" Picture="1" IgnoreMouse="1" Moveable="0" Border="0" NoClip="1" Overlapped="1" UseTemplateBG="1" NotRelative="0" UseParentOpacity="0" TestAlpha="0" Sprite="BasicSprites:WhiteFill" TextId="Launcher_RemoveSettings" DT_CENTER="1" DT_VCENTER="1">
